<resources>
    <string name="app_name">PES_INFOVID19</string>
    <string name="BotonErte">Erte </string>
    <string name="okErte">Aceptar </string>
    <string name="email_label">Email</string>
    <string name="title_activity_open_test_vulnerable">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mites_sobre_el_covid">Mites sobre el Covid</string>
    <string name="proves_de_detecci_del_virus">proves de detecció del virus</string>
    <string name="prevenci_de_riscos">prevenció de riscos</string>
    <string name="consultar_poblaci_de_risc">Consultar població de risc</string>
    <string name="informaci_rellevant">Informació rellevant</string>
    <string name="consultar_informaci">Consultar informació</string>
    <string name="menu_inicial">Menú inicial</string>
    <string name="name_label">Nom</string>
    <string name="surname_label">Cognoms</string>
    <string name="dni_label">DNI</string>
    <string name="company_label">Empresa</string>
    <string name="bank_label">Compte bancari</string>
    <string name="telefon_label">Número de telèfon</string>
    <string name="postalCode_label">Codi Postal</string>
    <string name="base_reg_label">Base reguladora</string>
    <string name="pdf_text">futuroTexto</string>
    <string name="boton_pdf">Envia</string>
    <string name="anterior_erte">Anterior</string>
    <string name="guardadPdf"> Guardar</string>
    <string name="info">Informació</string>
    <string name="Obrir_Test_de_Vulnerabilitat"> Test de Vulneravilitat</string>
    <string name="P11Vulnerable">Tens fills o filles?</string>
    <string name="P10Vulnerable">Coneixes els tràmits a realtizar en cas \nd\'acomidadament en la feina?</string>
    <string name="P9Vulnerable">Pots afrontar més de 3 mesos sense tenir cap \ntipus d\'ingrés?</string>
    <string name="P8Vulnerable">Tens alguna patologia cardiovascular?</string>
    <string name="P7Vulnerable">El teu estil de vida és sedentari?</string>
    <string name="P6Vulnerable">Tens o has tingut problemes respiratoris?</string>
    <string name="P5Vulnerable">Pateixes alguna malatia crònica?</string>
    <string name="P4Vulnerable">Tens més de 65 anys?</string>
    <string name="P3Vulnerable">Tens algún familiar que visqui prop de la teva \nresidència?</string>
    <string name="P2Vulnerable">Vius sol/a?</string>
    <string name="P1Vulnerable">T\'has quedat sense feina o la teva empresa \nha tancat?</string>
    <string name="centre_hospitalari_m_s_proper">Centre hospitalari més proper</string>
    <string name="fer_test_de_probabilitat_de_contagi">Fer test de probabilitat de contagi</string>
    <string name="fer_test_de_vulnerabilitat">Fer test de Vulnerabilitat</string>
    <string name="preparar_reclamaci_erte">Preparar reclamació ERTE</string>
    <string name="tittleMainMenu"><![CDATA[Benvingut/da <Usuari>]]></string>
    <string name="subTitleMainMenu">Què vols fer?</string>
    <string name="fab_xat_descriptor">Xat</string>
    <string name="perfil_d_usuari">Perfil usuari</string>
    <string name="l_all_prev_el_contagi">L\'all prevé el contagi</string>
    <string name="contentQuestionGarlic">Hola!</string>
    <string name="string_button_test">Fer test de probabilitat de contagi</string>
    <string name="string_button_chat">Demana ajuda a un voluntari</string>
    <string name="string_button_comprovar_vulnerabilitat">Comprovar Vulnerabilitat</string>
    <string name="string_info_ajuda_voluntari">Si has donat més d\'un 50% en un o més dels grups vulnerables et recomanem que et posis en contacte amb un voluntari que et pugui ajudar/assessorar:</string>
    <string name="string_test_contagi">Si vols, pots fer també el test sobre probabilitat de contagi</string>
    <string name="P1Infection">Tens o has tingut més de 37º de febre?</string>
    <string name="P2Infection">Tens tos seca?</string>
    <string name="P3Infection">Tens sensació de fatiga?</string>
    <string name="P4Infection">Presentes dificultat per respirar o sensació de falta\nd\'aire?</string>
    <string name="P5Infection">Tens o has tingut diarrea?</string>
    <string name="P6Infection">Tens dolor abdominal?</string>
    <string name="P7Infection">Tens dolor o sents pressió al pit?</string>
    <string name="P8Infection">Et sents incapaç o tens dificultats per parlar o moure\'t?</string>
    <string name="P9Infection">Sents pèrdua de l\'olfacte o del gust?</string>
    <string name="P10Infection">Presentes erupcions cutànies a la pell?</string>
    <string name="P11Infection">Presentes algun símptoma de refredat, com mal\nde cap, mal de gola, secresió nasal, etc.?</string>
    <string name="string_button_comprovar_probabilitat">Comprovar probabilitat</string>
    <string name="string_button_centre">Centre hospitalari més proper</string>
    <string name="string_button_vulnerable_test">Fer test de vulnerabilitat</string>
    <string name="string_button_061">061</string>
    <string name="string_text_info2_infection">Si tens una probabilitat normal o superior et\nrecomanem contactar amb el centre hospitalari\nmés proper a la teva localització</string>
    <string name="string_text_info3_infection">o truca al</string>
    <string name="string_text_info4_infection">Si vols, pots fer també el test per veure si ets vulnerable</string>
    <string name="administrar_mites">Administrar mites</string>
    <string name="crear_nou_mite">Crear nou mite</string>
    <string name="titol_del_mite">Titol del mite</string>
    <string name="descripci_del_mite">Descripció del mite</string>
    <string name="data_de_publicaci">Data de publicació</string>
    <string name="font_de_la_publicaci">Font de la publicació</string>
    <string name="guardar_canvis">Guardar canvis</string>
    <string name="administrar_tipus_de_proves">Administrar tipus de proves</string>
    <string name="descripci_del_tipus_de_prova_m_dica">descripció del tipus de prova mèdica</string>
    <string name="nom_de_la_prova_m_dica">Nom de la prova mèdica</string>
    <string name="crear_nova_prova_m_dica">crear nova prova mèdica</string>
    <string name="administrar_prevenci_de_riscos">Administrar prevenció de riscos</string>
    <string name="crear_nova_prevenci">Crear nova prevenció</string>
    <string name="titol_de_la_prevenci_de_risc">Titol de la prevenció de risc</string>
    <string name="titol_de_la_prevenci">Titol de la prevenció</string>
    <string name="url_de_la_imatge_que_es_vulgui_adjuntar">URL de la imatge que es vulgui adjuntar</string>
    <string name="modifica_prevenci_de_riscos">Modifica prevenció de riscos</string>
    <string name="administrar_poblaci_de_risc">Administrar població de risc</string>
    <string name="crear_nova_poblaci_de_risc">Crear nova població de risc</string>
    <string name="nom_de_la_poblaci_de_risc">Nom de la població de risc</string>
    <string name="escribe_un_mensaje">Escriu un missatge</string>
    <string name="enviar">Enviar</string>
    <string name="text_de_la_nova_pregunta">Text de la nova pregunta</string>
    <string name="administrar_preguntes_del_test">Administrar preguntes del test</string>
    <string name="bot_per_a_editar_la_pregunta">Botó per a editar la pregunta</string>
    <string name="boto_per_a_esborrar_la_pregunta">Boto per a esborrar la pregunta</string>
    <string name="bot_per_afegir_pregunta">Botó per afegir pregunta</string>
    <string name="punts_de_la_nova_pregunta">punts de la nova pregunta</string>
    <string name="boto_per_finalitzar_la_edicio">Boto per finalitzar la edicio</string>
    <string name="text_de_la_pregunta">Text de la pregunta</string>
    <string name="boto_que_cancela_la_edicio">boto que cancela la edicio</string>
    <string name="punts_de_la_pregunta">punts de la pregunta</string>
    <string name="molt_baixa">Molt baixa</string>
    <string name="baixa">Baixa</string>
    <string name="normal">Normal</string>
    <string name="alta">Alta</string>
    <string name="molt_alta">Molt alta</string>
    <string name="delete">Delete</string>
    <string name="button">Button</string>
    <string name="cerca_a_alg">Cerca a algú</string>
    <string name="cerca">Cerca</string>
    <string name="infovid_19">Infovid-19</string>
    <string name="la_teva_probabilitat_d_haver_te_contagiat_s">La teva probabilitat d\'haver-te contagiat és</string>
    <string name="comprovar_vulnerabilitat">Comprovar vulnerabilitat</string>
    <string name="truca">truca a l\'hospital</string>
    <string-array name="types">
        <item>salut</item>
        <item>economica</item>
        <item>social</item>
    </string-array>
</resources>