<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/editButtonQuestionTest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/editButtonQuestionTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bot_per_a_editar_la_pregunta"
        android:src="@drawable/ic_baseline_edit_black_24"
        app:layout_constraintEnd_toStartOf="@id/deleteButtonQuestionTest"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/deleteButtonQuestionTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/boto_per_a_esborrar_la_pregunta"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/questionEditableText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_de_la_pregunta"
        app:layout_constraintEnd_toStartOf="@id/completeEditionQuestionTest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <EditText
        android:id="@+id/questionEditablePoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/punts_de_la_pregunta"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/completeEditionQuestionTest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionEditableText"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/completeEditionQuestionTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/boto_per_finalitzar_la_edicio"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintBottom_toTopOf="@id/cancelEditionQuestionTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/cancelEditionQuestionTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/boto_que_cancela_la_edicio"
        android:src="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completeEditionQuestionTest"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>